@@ -5,8 +5,8 @@ import com.team1.mixIt.post.dto.request.PostCreateRequest;
 import com.team1.mixIt.post.dto.request.PostUpdateRequest;
 import com.team1.mixIt.post.dto.response.PostResponse;
 import com.team1.mixIt.post.dto.response.LikeResponse;
-import com.team1.mixIt.post.exception.BadRequestException;
 import com.team1.mixIt.post.enums.Category;
+import com.team1.mixIt.post.exception.BadRequestException;
 import com.team1.mixIt.post.service.PostLikeService;
 import com.team1.mixIt.post.service.PostService;
 import com.team1.mixIt.image.entity.Image;
@@ -25,6 +25,7 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -39,40 +40,36 @@ public class PostController {
     private final PostLikeService likeService;
     private final ImageService imageService;
 
-    /**
-     * 게시물 생성: JSON-only 또는 multipart/form-data 모두 지원
-     */
-    @PostMapping(
-            consumes = {
-                    MediaType.APPLICATION_JSON_VALUE,
-                    MediaType.MULTIPART_FORM_DATA_VALUE
-            }
-    )
+    // JSON-only 요청 (이미지 없는 경우)
+    @PostMapping(consumes = MediaType.APPLICATION_JSON_VALUE)
     @ResponseStatus(HttpStatus.CREATED)
-    public ResponseTemplate<Long> createPost(
+    @Operation(summary = "게시물 생성 (JSON only)", description = "이미지 없이 JSON body로 게시물을 생성합니다.")
+    public ResponseTemplate<Long> createPostJson(
             @AuthenticationPrincipal User user,
-            @Valid @RequestPart(value = "dto", required = false) PostCreateRequest dtoPart,
-            @RequestPart(value = "images", required = false) List<MultipartFile> imagesPart,
-            @Valid @RequestBody(required = false) PostCreateRequest dtoJson
+            @Valid @RequestBody PostCreateRequest dto
     ) {
-        // DTO 선택: multipart/form-data vs. application/json
-        PostCreateRequest dto = dtoPart != null ? dtoPart : dtoJson;
-        if (dto == null) {
-            throw new BadRequestException("요청 본문이 비어 있습니다.");
-        }
-
-        // 이미지 검증 및 업로드
-        List<Long> imageIds = validateAndUploadImages(user, imagesPart);
-        dto.setImageIds(imageIds);
-
+        dto.setImageIds(Collections.emptyList());
         return ResponseTemplate.ok(
                 postService.createPost(user.getId(), dto)
         );
     }
 
-    /**
-     * 전체 게시물 목록 조회
-     */
+    // multipart/form-data 요청 (이미지 포함 또는 없는 경우)
+    @PostMapping(consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
+    @ResponseStatus(HttpStatus.CREATED)
+    @Operation(summary = "게시물 생성 (multipart)", description = "이미지 포함/미포함 모두 지원하는 multipart/form-data 요청입니다.")
+    public ResponseTemplate<Long> createPostMultipart(
+            @AuthenticationPrincipal User user,
+            @Valid @RequestPart("dto") PostCreateRequest dto,
+            @RequestPart(value = "images", required = false) List<MultipartFile> images
+    ) {
+        List<Long> imageIds = validateAndUploadImages(user, images);
+        dto.setImageIds(imageIds);
+        return ResponseTemplate.ok(
+                postService.createPost(user.getId(), dto)
+        );
+    }
+
     @Operation(summary = "전체 게시물 목록 조회", description = "카테고리, 키워드, 정렬, 페이징 조건으로 조회합니다.")
     @ApiResponse(responseCode = "200", description = "조회 성공")
     @GetMapping
@@ -90,9 +87,6 @@ public class PostController {
         );
     }
 
-    /**
-     * 게시물 상세 조회
-     */
     @Operation(summary = "게시물 상세 조회", description = "게시물을 조회하고 조회수를 증가시킵니다.")
     @ApiResponse(responseCode = "200", description = "조회 성공")
     @GetMapping("/{id}")
@@ -105,10 +99,8 @@ public class PostController {
         return ResponseTemplate.ok(dto);
     }
 
-    /**
-     * 게시물 수정 (multipart/form-data 전용)
-     */
-    @Operation(summary = "게시물 수정", description = "내가 쓴 게시물을 수정합니다.")
+    // 게시물 수정 (multipart/form-data 전용)
+    @Operation(summary = "게시물 수정", description = "이미지 포함/미포함 수정 지원")
     @ApiResponse(responseCode = "200", description = "수정 성공")
     @PutMapping(value = "/{id}", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
     public ResponseTemplate<Void> updatePost(
@@ -123,9 +115,7 @@ public class PostController {
         return ResponseTemplate.ok();
     }
 
-    /**
-     * 게시물 삭제
-     */
+    // 게시물 삭제
     @DeleteMapping("/{id}")
     @ApiResponse(responseCode = "200", description = "삭제 성공")
     public ResponseTemplate<Void> deletePost(
@@ -136,9 +126,7 @@ public class PostController {
         return ResponseTemplate.ok();
     }
 
-    /**
-     * 게시물 좋아요 등록/해제
-     */
+    // 좋아요 등록/해제
     @Operation(summary = "게시물 좋아요 등록", description = "게시물에 좋아요를 남깁니다.")
     @ApiResponse(responseCode = "201", description = "좋아요 등록 성공")
     @PostMapping("/{postId}/like")
@@ -161,9 +149,6 @@ public class PostController {
         return ResponseTemplate.ok();
     }
 
-    /**
-     * 좋아요 상태 조회
-     */
     @Operation(summary = "좋아요 상태 조회", description = "사용자의 좋아요 여부와 좋아요 수를 반환합니다.")
     @ApiResponse(responseCode = "200", description = "조회 성공")
     @GetMapping("/{postId}/like")
@@ -177,7 +162,7 @@ public class PostController {
     // 공통 이미지 검증 & 업로드 로직
     private List<Long> validateAndUploadImages(User user, List<MultipartFile> images) {
         if (images == null || images.isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
         if (images.size() > 10) {
             throw new BadRequestException("최대 10장까지 업로드 가능합니다.");
